--- a/question 22.ipynb
+++ b/question 22.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "14462eb0",
+   "id": "dbff7eb1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "065de347",
+   "id": "b44ab3af",
    "metadata": {},
    "outputs": [
     {
@@ -57,8 +57,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "c3717abe",
+   "execution_count": 16,
+   "id": "4ada8a88",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,8 +70,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "d63d6eab",
+   "execution_count": 17,
+   "id": "039ed952",
    "metadata": {},
    "outputs": [
     {
@@ -137,7 +137,7 @@
        "3   4  2015-01-04           30"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -148,20 +148,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "cec2d40d",
+   "execution_count": 26,
+   "id": "de3ebec2",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df['previous_temp'] = df['temperature'].shift(1)\n",
-    "\n",
-    "result = df[df['temperature'] > df['previous_temp']][['id']]"
+    "temporary_temp = df['temperature'] > df['temperature'].shift(1)\n",
+    "result = df[temporary_temp][['id']]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "045ef026",
+   "execution_count": 27,
+   "id": "2b03ef70",
    "metadata": {},
    "outputs": [
     {
@@ -207,7 +206,7 @@
        "3   4"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
